--- a/POSApp/Views/Foods/Index.cshtml
+++ b/POSApp/Views/Foods/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 food-header">
         <div class="row">
             <div class="col-md-6 food-index-left-top">
                 <h2>Menu Management</h2>
@@ -19,7 +19,6 @@
         </div>
     </div>
 </div>
-<div class="horizontal-line"></div>
 <div class="food-list">
     <div class="food-modal">
         <button type="button" class="btn btn-food-modal" data-bs-toggle="modal" data-bs-target="#foodModal">
