--- a/POSApp/Views/Shared/_Layout.cshtml
+++ b/POSApp/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
         <ul>
             <li class="menu-item"><i class="fa fa-home"></i>@Html.ActionLink("Menu", "View", "Menu")</li>
             <li class="menu-item"><i class="fa fa-money"></i>@Html.ActionLink("Riwayat", "View", "Management")</li>
-            <li class="menu-item"><i class="fa fa-pie-chart"></i>@Html.ActionLink("Manajemen", "View", "Inventory")</li>
-            <li class="menu-item"><i class="fa fa-list-alt"></i>@Html.ActionLink("Inventory", "View", "History")</li>
+            <li class="menu-item"><i class="fa fa-pie-chart"></i>@Html.ActionLink("Manajemen", "Index", "Foods")</li>
+            <li class="menu-item"><i class="fa fa-list-alt"></i>@Html.ActionLink("Inventory", "Index", "Inventories")</li>
         </ul>
     </div>
     <div class="main-menu">
