Improve inventory page

--- a/POSApp/Views/Inventories/Index.cshtml
+++ b/POSApp/Views/Inventories/Index.cshtml
@@ -142,8 +142,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="inventory-modal">
-                                <button type="button" class="btn btn-inventory-modal" data-bs-toggle="modal" data-bs-target="#inventoryModalEdit">
-                                    <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i>
+                                <button type="button" class="btn btn-inventory-modal-edit" data-bs-toggle="modal" data-bs-target="#inventoryModalEdit">
+                                    <img src="~/Images/EditIcon.png" width="25" height="25" />
                                 </button>
                                 <div class="modal fade" id="inventoryModalEdit" tabindex="-1" aria-labelledby="inventoryModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
@@ -223,7 +223,7 @@
                         </div>
                         <div class="col-md-6">
                             <button type="button" class="btn inventory-modal-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                <i class="fa fa-trash-o fa-2x" aria-hidden="true"></i>
+                                <img src="~/Images/DeleteIcon.png" width="25" height="25" />
                             </button>
                             <div class="modal fade inventory-modal-delete" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
